--- a/majorproject/package.json
+++ b/majorproject/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.10.5",
@@ -43,4 +44,3 @@
     ]
   }
 }
-
